--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "git repository": "https://github.com/jakholuo/hw-obs-plugin",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jakholuo/hw-obs-plugin"
+  },
   "license": "ISC",
   "dependencies": {
     "ansi-colors": "^4.1.1",
